crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@11.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE num_data (id int4, val numeric(1000,800));"
---
CreateStmt@0..55
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..21
    Ident@13..21 "num_data"
  Whitespace@21..22 " "
  Ascii40@22..23 "("
  ColumnDef@23..30
    Ident@23..25 "id"
    Whitespace@25..26 " "
    TypeName@26..30
      Ident@26..30 "int4"
  Ascii44@30..31 ","
  Whitespace@31..32 " "
  ColumnDef@32..52
    Ident@32..35 "val"
    Whitespace@35..36 " "
    TypeName@36..52
      Numeric@36..43 "numeric"
      Ascii40@43..44 "("
      AConst@44..48
        Iconst@44..48 "1000"
      Ascii44@48..49 ","
      AConst@49..52
        Iconst@49..52 "800"
  Ascii41@52..53 ")"
  Ascii41@53..54 ")"
  Ascii59@54..55 ";"

