crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@115.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_sub VALUES (2,3,'60301034611793381560791130065937008239.1887410058901624055165373281235236307966057696953851292799409809571799686645246659986351515277852800926805119259053513475211488115663286642009614039264484259692394657121785950542874788161683538629473170704026975786513125842675604577233871570629808699803522400038975396500769162308448069085909755023233588510630417065084295051270219462289785473643946404281422516357503746700705970360169619852905053433235726497292406142332833');"
---
InsertStmt@0..503
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "num_exp_sub"
  Whitespace@23..24 " "
  SelectStmt@24..501
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..501
      AConst@32..33
        Iconst@32..33 "2"
      Ascii44@33..34 ","
      AConst@34..35
        Iconst@34..35 "3"
      Ascii44@35..36 ","
      AConst@36..501
        Sconst@36..501 "'60301034611793381560 ..."
  Ascii41@501..502 ")"
  Ascii59@502..503 ";"

